# easy-crawler

./: .gitignore  README.md  USAGE.md  config.json  docker-compose.yaml  main.py  pyproject.toml
src/: api.py  config_loader.py  crawler.py  scheduler.py  storage.py
