[project]
name = "easy-crawler"
version = "0.1.0"
description = "Web crawler with Playwright, BeautifulSoup, and Flask API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "html2text>=2024.2.26",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
